# McubootEncryptionTest

./: CMakeLists.txt  README.rst  overlay-bt.conf  prj.conf
child_image/: mcuboot.conf
src/: bluetooth.c  bluetooth.h  main.c
